Fixed spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -348,7 +348,7 @@ html {
 
 
 .schedule-end-spacing {
-    margin-bottom: 2vh;
+    margin-bottom: 3vh;
 }
 
 
